<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.devsylone</groupId>
    <artifactId>fallenkingdom</artifactId>
    <version>2.18.1</version>
    <packaging>jar</packaging>
    <name>FallenKingdom</name>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <licenses>
        <license>
            <name>CC BY-NC-ND 4.0</name>
            <url>https://creativecommons.org/licenses/by-nc-nd/4.0/</url>
        </license>
    </licenses>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <defaultGoal>clean package</defaultGoal>
        <sourceDirectory>src/</sourceDirectory> <!-- Force Maven to explore src/ because of its unusual structure -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <minimizeJar>true</minimizeJar>
                            <relocations>
                                <relocation>
                                    <!-- Keeps consistency with the modified version of XBlock -->
                                    <pattern>com.cryptomorin.xseries</pattern>
                                    <shadedPattern>fr.devsylone.fallenkingdom.utils</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>fr.devsylone.fallenkingdom.bstats</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Used to check the structure of NMS packets -->
        <!--<dependency>
            <groupId>1.15.2_R0.1</groupId>
            <artifactId>spigot_1_15_2</artifactId>
            <version>1.15.2-R0.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../spigot-1.15.2.jar</systemPath>
        </dependency>-->
         <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.15.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Structure of 1.8 NMS packets -->
<!--          <dependency> -->
<!--             <groupId>org.spigotmc</groupId> -->
<!--             <artifactId>spigot</artifactId> -->
<!--             <version>1.8.8-R0.1-SNAPSHOT</version> -->
<!--             <scope>provided</scope> -->
<!--         </dependency> -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-buffer</artifactId>
            <version>4.1.45.Final</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>5.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>1.7</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
